tests/fixtures/app/examples/fail_NotAnEnum.stderr
error: Termination can only be derived for an enum
 --> tests/fixtures/app/examples/fail_NotAnEnum.rs:3:17
  |
3 | #[derive(Debug, Termination)]
  |                 ^^^^^^^^^^^
  |
help: not an enum
 --> tests/fixtures/app/examples/fail_NotAnEnum.rs:4:8
  |
4 | struct AStruct {
  |        ^^^^^^^
  = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)
