tests/fixtures/app/examples/fail_NotAnEnum.rs
use exit_safely::Termination;

#[derive(Debug, Termination)]
struct AStruct {
    foo: u8,
    bar: u8,
}

fn main() {}
